(filament - square domain) Added new application;  added support for clawpack 5.0

--- a/applications/advection/2d/filament/example1_cart.ini
+++ b/applications/advection/2d/filament/example1_cart.ini
@@ -1,67 +1,30 @@
 [user]
-	example = 1       # Cartesian grid  (brick + cart)
+     example = 1       # Cartesian grid  (brick + cart)
 
 [Options]
-     mx = 1024
-     my = 1024
+     mx = 8
+     my = 8
      mbc = 2
 
-     minlevel = 0         # Minimum level
-     maxlevel = 0	  # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 5	  # Maximum levels of refinement
 
-# Regridding options
-     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = F
-     coarsen-delay = 1
-     refine_threshold = 0.1
-     coarsen_threshold = 1e-3
-     smooth-level = 5
+     smooth-refine = T
+     smooth-level = 4
+
 
 # mapping options
      manifold = T
 
-     shift = 1 1 0     # shift to [0,2]x[0,2]
+     shift = 1 1 0     # Cartesian grid is in [-1,1]x[-1,1] so we shift to [0,2]x[0,2]
 
-     mi = 1            # Brick dimensions (used in Cartesian mapping)
-     mj = 1
-
-# Time stepping
-     tfinal = 8.0         #
-
-     use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 2.5e-4   # Initial time step for 'minlevel'
-     max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
-
-     outstyle = 3         # Controls how often output files are produced
-     nout =  32000
-     nstep = 4000            # Only used if outstyle is 3
-
-     subcycle = T       # subcycle in time ( = T or F).
-
-# Equation info
-     meqn = 1             # meqn
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
-
-
-# Diagnostics and debugging
-     check_conservation = F
-     run_diagnostics = F
-     trapfpe = T          # trap floating point exceptions
-     mpi_debug = F
-
-# File and console IO
-     verbosity = essential    # verbosity
-     serialout = T            # Works with Matlab
-     tikzout = T
-     tikz_figsize = 4 4
-     vtkout = 0               # Read into VisIt
+     mi = 2            # Brick dimensions (used in Cartesian mapping)
+     mj = 2
 
 [clawpack46]
-     order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
      maux = 3             # maux  (store mcapa in 1, if we have it)
-     src_term = 0         # src_term
 
-     mwaves = 1           # mwaves
-     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+[clawpack5]
+     mcapa = 1            # mcapa
+     maux = 3             # maux  (store mcapa in 1, if we have it)
