--- a/applications/advection/2d/filament/example0.ini
+++ b/applications/advection/2d/filament/example0.ini
@@ -1,50 +1,14 @@
 [user]
      example = 0
+     claw-version=4
 
 [Options]
      mx = 8
      my = 8
-     mbc = 2            # number of ghost cells
 
 # Regridding optionsx
      minlevel = 3         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
-     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     smooth-refine = T
-     smooth-level = 0
-     coarsen-delay = 0
-     refine_threshold = 0.05
-     coarsen_threshold = 0.001
-
-# Time stepping
-     tfinal = 4.0         #
-
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 4e-3   # Initial time step for 'minlevel'
-     max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
-
-     outstyle = 1         # Controls how often output files are produced
-     nout = 40
-     nstep = 1            # Only used if outstyle is 3
-
-     subcycle = F       # subcycle in time ( = T or F).
-
-# Equation info
-     meqn = 1             # meqn
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
-
-
-# Diagnostics and debugging
-     check_conservation = F
-     run_diagnostics = F
-     trapfpe = T          # trap floating point exceptions
-     mpi_debug = F
-
-# File and console IO
-     verbosity = essential    # verbosity
-     serialout = T            # Works with Matlab
-     vtkout = 0               # Read into VisIt
 
 # mapping functions
      manifold = F         # Manifold
@@ -54,12 +18,3 @@
      bx = 2
      ay = 0
      by = 2
-
-[clawpack46]
-     order  = 2 2         # normal and transverse order
-     mcapa = 0            # mcapa
-     maux = 3             # maux  (store mcapa in 1, if we have it)
-     src_term = 0         # src_term
-
-     mwaves = 1           # mwaves
-     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
