--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -1,19 +1,22 @@
 [user]
      example = 0        # no mapping
+     claw-version = 4
 
 [Options]
 # Grid dimensions
-     mx = 16
-     my = 16		# grid dimensions
+     mx = 8
+     my = 8		# grid dimensions
      mbc = 2            # number of ghost cells
 
 
 # Regridding optionsx
      minlevel = 3         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     maxlevel = 6         # Maximum levels of refinement
+
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      smooth-refine = T
-     coarsen-delay = 1
+     smooth-level = 5
+     coarsen-delay = 0
      refine_threshold = 0.25
      coarsen_threshold = 0.05
 
@@ -37,29 +40,40 @@
 
 
 # Diagnostics and debugging
-     check_conservation = F
-     run_diagnostics = F
+     conservation-check = F
+     run-user-diagnostics = F
      trapfpe = T          # trap floating point exceptions
      mpi_debug = F
 
 # File and console IO
-     verbosity = production    # verbosity
+     verbosity = essential    # verbosity
      serialout = T            # Works with Matlab
      vtkout = 0               # Read into VisIt
+     tikzout = F
+     tikz_figsize = 4 4
 
-# mapping functions
-     manifold = F         # Manifold
+# mapping options
+     manifold = F
 
-     # Domain for single grid, non-mapped grid.
      ax = 0
      bx = 2
      ay = 0
      by = 2
 
+
 [clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
-     maux = 3             # maux  (store mcapa in 1, if we have it)
+     maux = 2             # maux  (store mcapa in 1, if we have it)
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack5]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 2             # maux  (store mcapa in 1, if we have it)
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
