--- a/applications/advection/2d/torus/example1_error.ini
+++ b/applications/advection/2d/torus/example1_error.ini
@@ -1,72 +1,62 @@
 [user]
-     example = 5       # 0=no map; 1=brick; 2=torus; 3=latlong; 4=annulus; 5=replicate
+     example = 0       # 0=no map; 1=brick; 2=torus; 3=latlong; 4=annulus
 
 [Options]
 
 # Grid dimensions
-     mx = 16               # Interior dimensions of each grid
-     my = 16		  #
+     mx = 8               # Interior dimensions of each grid
+     my = 8		  #
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
-     minlevel = 4         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 5         # Maximum levels of refinement
 
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
-     coarsen_threshold = 0.001
-     smooth-refine = T
-     smooth-level = 6
-     coarsen-delay = 0
+     coarsen_threshold = 0.01
+     smooth-refine=T
+     coarsen-delay=0
 
 # Time stepping
-     tfinal = 2.0         #
+     tfinal = 4.0         #
+     initial_dt = 0.05    # Initial time step for 'minlevel'
 
-     use_fixed_dt = T     # Take a fixed time step
-     initial_dt = 2.5e-3    # Initial time step for 'minlevel'
+     use_fixed_dt = F     # Take a fixed time step
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 20         # Used for all three out styles;  has different meaning, though.
-     nstep =  1           # Only used if outstyle is 3
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nstep = 1            # Only used if outstyle is 3
 
      subcycle =  T        # subcycle in time ( = T or F).
-     advance-one-step = F
-     outstyle-uses-maxlevel = F    # nout steps on finest level (not coarsest)
-     weighted_partition = T
 
 # Equation and boundary conditions
      meqn = 1             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 # Diagnostics and debugging
-     conservation-check = F
-     compute-error = T
-     run-user-diagnostics = F
-     trapfpe = F          # trap floating point exceptions
+     verbosity = production        # verbose
+     check_conservation = T
+     run_diagnostics = F
+     trapfpe = T          # trap floating point exceptions
      mpi_debug = F
 
 # File and console IO
-     verbosity = essential  #      # verbose
-     tikzout = T
-     tikz_figsize = 4 4
-     vtkout = 0               # Read into VisIt
+
      serialout = T
 
 # Mapping options
      manifold = F         # Manifold
 
-     mi = 1
-     mj = 1
-
      periodic_x = T
      periodic_y = T
 
      # These dimensions only get used if manifold = F
-     ax = 0
+     ax = -1
      bx = 1
-     ay = 0
+     ay = -1
      by = 1
 
 # -----------------------------------------------------------
