(quadrants) Clean up application;  add support for Clawpack 5.0 (using Riemann solvers from Clawpack directly)

--- a/applications/euler/2d/quadrants/Makefile.am
+++ b/applications/euler/2d/quadrants/Makefile.am
@@ -9,17 +9,17 @@ applications_euler_2d_quadrants_quadrants_SOURCES = \
 	applications/euler/2d/quadrants/quadrants.cpp \
 	applications/euler/2d/quadrants/quadrants_user.cpp \
 	applications/euler/2d/quadrants/fclaw2d_map_nomap.c \
-	applications/euler/2d/quadrants/fclaw2d_map_identity.c \
-	applications/euler/2d/quadrants/fclaw2d_map_cart.c \
 	applications/euler/2d/quadrants/fclaw2d_map_fivepatch.c \
 	applications/euler/2d/quadrants/setprob.f \
-	applications/euler/2d/quadrants/user_4.x/rpn2eu3.f \
-	applications/euler/2d/quadrants/user_4.x/rpn2eu4.f \
-	applications/euler/2d/quadrants/user_4.x/rpt2eu.f \
-	applications/euler/2d/quadrants/user_4.x/qinit.f
+	applications/euler/2d/quadrants/user_4.6/qinit.f \
+	applications/euler/2d/quadrants/user_5.0/qinit.f90 \
+	applications/euler/2d/all/clawpack46_rpn2eu4.f \
+	applications/euler/2d/all/clawpack46_rpt2eu.f \
+	applications/euler/2d/all/clawpack5_rpn2eu4.f90 \
+	applications/euler/2d/all/clawpack5_rpt2eu.f90
 
 applications_euler_2d_quadrants_quadrants_CPPFLAGS = \
-        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
+        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_euler_2d_quadrants_quadrants_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD)  $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
