(replicated) Matlab/ini files

--- a/applications/advection/2d/replicated/fclaw_options.ini
+++ b/applications/advection/2d/replicated/fclaw_options.ini
@@ -49,7 +49,7 @@
 
 # File and console IO
 
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      serialout = T
 
 # Mapping options
@@ -58,8 +58,8 @@
      periodic_x = T
      periodic_y = T
 
-     mi = 4
-     mj = 4
+     mi = 2
+     mj = 2
 
      # These dimensions only get used if manifold = F
      ax = 0
