(amrclaw/acoustics/2d/interface) Update application to support clawpack 5.0

--- a/applications/amrclaw/acoustics/2d/interface/fclaw_options.ini
+++ b/applications/amrclaw/acoustics/2d/interface/fclaw_options.ini
@@ -3,6 +3,7 @@
      cl = 1
      rhor = 4.0
      cr = 0.5
+     claw-version = 4
 
 [Options]
 
@@ -17,7 +18,8 @@
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.05
      coarsen_threshold = 1e-4
-     smooth-refine=T
+     smooth-refine = T
+     smooth-level = 4
      coarsen-delay=1
 
 # Time stepping
@@ -41,8 +43,8 @@
 # Debugging and diagnostics
      trapfpe = T
      mpi_debug = F
-     run_diagnostics = F
-     check_conservation = F
+     run-user-diagnostics = F
+     conservation-check = F
 
 # Equations and boundary conditions
      meqn = 3             # meqn
@@ -60,6 +62,15 @@
      by = 1
 
 [clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 2             # maux
+     src_term = 0         # src_term
+
+     mwaves = 2           # mwaves
+     mthlim = 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 2             # maux
