--- a/applications/amrclaw/acoustics/2d/interface/Makefile.am
+++ b/applications/amrclaw/acoustics/2d/interface/Makefile.am
@@ -11,15 +11,20 @@ applications_amrclaw_acoustics_2d_interface_interface_SOURCES = \
 	applications/amrclaw/acoustics/2d/interface/p0.f \
 	applications/amrclaw/acoustics/2d/interface/fclaw2d_map_nomap.c \
 	applications/amrclaw/acoustics/2d/interface/setprob.f \
-	applications/amrclaw/acoustics/2d/interface/user_4.x/setaux.f \
-	applications/amrclaw/acoustics/2d/interface/user_4.x/qinit.f \
-	applications/amrclaw/acoustics/2d/interface/user_4.x/tag4refinement.f \
+	applications/amrclaw/acoustics/2d/interface/user_4.6/setaux.f \
+	applications/amrclaw/acoustics/2d/interface/user_4.6/qinit.f \
+	applications/amrclaw/acoustics/2d/interface/user_4.6/tag4refinement.f \
+	applications/amrclaw/acoustics/2d/interface/user_5.0/setaux.f90 \
+	applications/amrclaw/acoustics/2d/interface/user_5.0/qinit.f90 \
+	applications/amrclaw/acoustics/2d/interface/user_5.0/tag4refinement.f90 \
 	applications/amrclaw/acoustics/2d/rp/rpn2acv.f \
-	applications/amrclaw/acoustics/2d/rp/rpt2acv.f
+	applications/amrclaw/acoustics/2d/rp/rpt2acv.f \
+	applications/amrclaw/acoustics/2d/rp/rpn2_vc_acoustics.f90 \
+	applications/amrclaw/acoustics/2d/rp/rpt2_vc_acoustics.f90
 
 
 applications_amrclaw_acoustics_2d_interface_interface_CPPFLAGS = \
-        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
+        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_amrclaw_acoustics_2d_interface_interface_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
