--- a/applications/amrclaw/acoustics/2d/radial/fclaw_options.ini
+++ b/applications/amrclaw/acoustics/2d/radial/fclaw_options.ini
@@ -3,6 +3,8 @@
      rho = 1
      bulk = 4
 
+     claw-version = 4
+
 [Options]
 
 # Grids
@@ -17,7 +19,8 @@
      refine_threshold = 0.25
      coarsen_threshold = 0.01
      smooth-refine=T
-     coarsen-delay=1
+     smooth-level = 5
+     coarsen-delay=0
 
 # Time stepping
      tfinal = 1.0
@@ -40,8 +43,8 @@
 # Debugging and diagnostics
      trapfpe = T
      mpi_debug = F
-     run_diagnostics = F
-     check_conservation = F
+     run-user-diagnostics = F
+     conservation-check = F
 
 # Equations and boundary conditions
      meqn = 3             # meqn
@@ -57,6 +60,15 @@
      by = 1
 
 [clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 0             # maux
+     src_term = 0         # src_term
+
+     mwaves = 2           # mwaves
+     mthlim = 3 3     # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 0             # maux
