--- a/applications/amrclaw/acoustics/2d/radial/Makefile.am
+++ b/applications/amrclaw/acoustics/2d/radial/Makefile.am
@@ -9,16 +9,22 @@ applications_amrclaw_acoustics_2d_radial_radial_SOURCES = \
 	applications/amrclaw/acoustics/2d/radial/radial_user.cpp \
 	applications/amrclaw/acoustics/2d/radial/radial.cpp \
 	applications/amrclaw/acoustics/2d/radial/fclaw2d_map_nomap.c \
-	applications/amrclaw/acoustics/2d/radial/fclaw2d_map_squareddisk.c \
+	applications/amrclaw/acoustics/2d/radial/fclaw2d_map_pillowdisk5.c \
 	applications/amrclaw/acoustics/2d/radial/setprob.f \
 	applications/amrclaw/acoustics/2d/radial/user_4.6/tag4refinement.f \
+	applications/amrclaw/acoustics/2d/radial/user_4.6/tag4coarsening.f \
 	applications/amrclaw/acoustics/2d/radial/user_4.6/qinit.f \
+	applications/amrclaw/acoustics/2d/radial/user_4.6/setaux.f \
 	applications/amrclaw/acoustics/2d/radial/user_5.0/tag4refinement.f90 \
+	applications/amrclaw/acoustics/2d/radial/user_5.0/tag4coarsening.f90 \
 	applications/amrclaw/acoustics/2d/radial/user_5.0/qinit.f90 \
+	applications/amrclaw/acoustics/2d/radial/user_5.0/setaux.f90 \
 	applications/amrclaw/acoustics/2d/rp/rpn2ac.f \
 	applications/amrclaw/acoustics/2d/rp/rpt2ac.f \
 	applications/amrclaw/acoustics/2d/rp/rpn2_acoustics.f90 \
-	applications/amrclaw/acoustics/2d/rp/rpt2_acoustics.f90
+	applications/amrclaw/acoustics/2d/rp/rpt2_acoustics.f90 \
+	applications/amrclaw/acoustics/2d/rp/rpn2_acoustics_mapped.f90 \
+	applications/amrclaw/acoustics/2d/rp/rpt2_acoustics_mapped.f90
 
 
 applications_amrclaw_acoustics_2d_radial_radial_CPPFLAGS = \
