(acoustics/radial) Add ini/matlab files for mapped disk grid

--- a/applications/amrclaw/acoustics/2d/radial/example0.ini
+++ b/applications/amrclaw/acoustics/2d/radial/example0.ini
@@ -10,6 +10,8 @@
 # Regridding information
      minlevel = 2               # Minimum level
      maxlevel = 6               # Maximum levels of refinement
+     smooth-refine = T
+     smooth-level = 5
 
 # File and console IO
      verbosity = essential      # verbose
