--- a/applications/amrclaw/acoustics/2d/radial/example1.ini
+++ b/applications/amrclaw/acoustics/2d/radial/example1.ini
@@ -1,8 +1,23 @@
 [user]
     example = 1
+    alpha =  0.4
 
 [Options]
-     manifold = T         # Manifold
 
-     minlevel = 1               # Minimum level
+     mx = 8
+     my = 8
+     minlevel = 2               # Minimum level
      maxlevel = 5               # Maximum levels of refinement
+     smooth-refine = T
+     smooth-level = 4
+
+# Mapping
+     manifold = T         # Five-patch disk
+
+[clawpack46]
+     mcapa = 7            # mcapa
+     maux = 9             # maux
+
+[clawpack5]
+     mcapa = 7            # mcapa
+     maux = 9             # maux
