--- a/applications/amrclaw/acoustics/2d/radial/fclaw_options.ini
+++ b/applications/amrclaw/acoustics/2d/radial/fclaw_options.ini
@@ -2,7 +2,6 @@
      example = 0
      rho = 1
      bulk = 4
-
      claw-version = 4
 
 [Options]
@@ -16,14 +15,14 @@
      minlevel = 2               # Minimum level
      maxlevel = 6               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.25
-     coarsen_threshold = 0.01
+     refine_threshold = 0.5
+     coarsen_threshold = 0.25
      smooth-refine=T
      smooth-level = 5
      coarsen-delay=0
 
 # Time stepping
-     tfinal = 1.0
+     tfinal = 0.6
      initial_dt = 0.01          # Initial time step for 'minlevel'
 
      use_fixed_dt = F            # Take a fixed time step
@@ -31,13 +30,13 @@
      desired_cfl = 0.9
 
      outstyle = 1                # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 20                    # Used for all three out styles
+     nout = 12                    # Used for all three out styles
      nstep = 1                   # Only used if outstyle is 3
 
      subcycle = T                # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = production      # verbose
+     verbosity = essential      # verbose
      serialout = T               # ascii output
 
 # Debugging and diagnostics
