--- a/applications/amrclaw/advection/2d/swirl/example0.ini
+++ b/applications/amrclaw/advection/2d/swirl/example0.ini
@@ -1,11 +1,24 @@
 [user]
-    example=0
+    example = 0
+    tperiod = 4.0
+    claw-version = 4
 
 [Options]
     mx = 8
     my = 8
 
-    minlevel = 1
+    minlevel = 2
     maxlevel = 6
 
-    verbosity = essential
+# Regridding information
+     smooth-refine = T
+     refine-level = 5
+
+# Time stepping
+     tfinal = 4.0         #
+
+# File and console IO
+     verbosity = essential        # verbose
+
+# Output
+     serialout = T        # ascii output
