--- a/applications/amrclaw/burgers/2d/pwconst/Makefile.am
+++ b/applications/amrclaw/burgers/2d/pwconst/Makefile.am
@@ -1,21 +1,19 @@
-## Makefile.am in applications/amrclaw/burgers_2d_pwconst
-
-# A single hash comment like this one WILL show up in the Makefile.
-## A double hash comment like this one will NOT be copied to the Makefile.
-
 bin_PROGRAMS += applications/amrclaw/burgers/2d/pwconst/pwconst
 
 applications_amrclaw_burgers_2d_pwconst_pwconst_SOURCES = \
 	applications/amrclaw/burgers/2d/pwconst/pwconst_user.cpp \
 	applications/amrclaw/burgers/2d/pwconst/pwconst.cpp \
 	applications/amrclaw/burgers/2d/pwconst/fclaw2d_map_nomap.c \
-	applications/amrclaw/burgers/2d/pwconst/user_4.x/qinit.f \
-	applications/amrclaw/burgers/2d/rp/rpn2bu.f \
-	applications/amrclaw/burgers/2d/rp/rpt2bu.f
+	applications/amrclaw/burgers/2d/pwconst/user_4.6/qinit.f \
+	applications/amrclaw/burgers/2d/pwconst/user_5.0/qinit.f90 \
+	applications/amrclaw/burgers/2d/rp/clawpack46_rpn2_burgers.f  \
+	applications/amrclaw/burgers/2d/rp/clawpack46_rpt2_burgers.f  \
+	applications/amrclaw/burgers/2d/rp/clawpack5_rpn2_burgers.f90 \
+	applications/amrclaw/burgers/2d/rp/clawpack5_rpt2_burgers.f90
 
 
 applications_amrclaw_burgers_2d_pwconst_pwconst_CPPFLAGS = \
-        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
+        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_amrclaw_burgers_2d_pwconst_pwconst_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
