--- a/applications/amrclaw/burgers/2d/pwconst/fclaw_options.ini
+++ b/applications/amrclaw/burgers/2d/pwconst/fclaw_options.ini
@@ -1,3 +1,6 @@
+[user]
+     claw-verion = 4
+
 [Options]
 
 # Grids
@@ -8,11 +11,13 @@
 # Regridding information
      minlevel = 2               # Minimum level
      maxlevel = 6               # Maximum levels of refinement
+
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
      refine_theshold = 0.25
      coarsen_threshold = 0.05
-     smooth-refine=T
-     coarsen-delay=1
+     smooth-refine = T
+     smooth-level = 5
+     coarsen-delay = 0
 
 # Time stepping
      tfinal = 1.0
@@ -29,7 +34,7 @@
      subcycle = T                # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = production      # verbose
+     verbosity = essential      # verbose
      serialout = T               # ascii output
 
 # Debugging and diagnostics
@@ -52,6 +57,14 @@
      by = 1
 
 [clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 0             # maux
+     src_term = 0         # src_term
+     mwaves = 1           # mwaves
+     mthlim = 3     # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 0             # maux
