--- a/applications/amrclaw/shallow/2d/radialdam/example0.ini
+++ b/applications/amrclaw/shallow/2d/radialdam/example0.ini
@@ -1,4 +1,6 @@
 [user]
+
+      example = 0
       g = 1.0
       x0 = 0
       y0 = 0
@@ -6,60 +8,32 @@
       hin = 2.0
       hout = 1.0
 
+      claw-version = 4
 [Options]
 
 # Grids
-     mx = 16
-     my = 16
+     mx = 8
+     my = 8
      mbc = 2
 
 # Regridding information
      minlevel = 1               # Minimum level
-     maxlevel = 4               # Maximum levels of refinement
-     regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.25
-     coarsen_threshold = 0.02
-     smooth-refine=T
-     coarsen-delay=1
+     maxlevel = 5               # Maximum levels of refinement
+     smooth-refine = T
+     smooth-level = 4
 
-# Time stepping
-     tfinal = 1.5
-     initial_dt = 0.1          # Initial time step for 'minlevel'
-
-     use_fixed_dt = F            # Take a fixed time step
-     max_cfl = 1.0
-     desired_cfl = 0.9
-
-     outstyle = 1                # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 3                    # Used for all three out styles
-     nstep = 1                   # Only used if outstyle is 3
-
-     subcycle = T                # subcycle in time ( = T or F).
-
-# File and console IO
-     verbosity = production      # verbose
-     serialout = T               # ascii output
-
-# Debugging and diagnostics
-     trapfpe = F
-     mpi_debug = F
-     run_diagnostics = F
-     check_conservation = F
-
-# Equations and boundary conditions
-     meqn = 3             # meqn
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
-
-# Mapping and topology
-     manifold = F         # Manifold
-
-     # Used only if manifold = F (fclaw2d_map_nomap)
-     ax = -2.5
-     bx = 2.5
-     ay = -2.5
-     by = 2.5
+     verbosity = production
 
 [clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 0             # maux
+     src_term = 0         # src_term
+
+     mwaves = 3           # mwaves
+     mthlim = 4 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 0             # maux
