--- a/applications/amrclaw/shallow/2d/radialdam/fclaw_options.ini
+++ b/applications/amrclaw/shallow/2d/radialdam/fclaw_options.ini
@@ -1,4 +1,7 @@
 [user]
+      example = 0
+      claw-version = 4
+
       g = 1.0
       x0 = 0.0
       y0 = 0.0
@@ -18,10 +21,11 @@
      minlevel = 1               # Minimum level
      maxlevel = 5               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.25
-     coarsen_threshold = 0.02
-     smooth-refine=T
-     coarsen-delay=1
+     refine_threshold = 0.5
+     coarsen_threshold = 0.25
+     smooth-refine = T
+     smooth-level = 4
+     coarsen-delay = 0
 
 # Time stepping
      tfinal = 1.5
@@ -38,14 +42,14 @@
      subcycle = T                # subcycle in time ( = T or F).
 
 # File and console IO
-     verbosity = production      # verbose
+     verbosity = essential      # verbose
      serialout = T               # ascii output
 
 # Debugging and diagnostics
      trapfpe = T
      mpi_debug = F
-     run_diagnostics = F
-     check_conservation = F
+     run-user-diagnostics = F
+     conservation-check = F
 
 # Equations and boundary conditions
      meqn = 3             # meqn
@@ -61,6 +65,15 @@
      by = 2.5
 
 [clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 0             # maux
+     src_term = 0         # src_term
+
+     mwaves = 3           # mwaves
+     mthlim = 4 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 0             # maux
