--- a/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
@@ -6,6 +6,8 @@
 	rhoin = 0.1
 	pinf = 5.0
 
+	claw-version = 4
+
 [Options]
 
 # Grids
@@ -17,9 +19,10 @@
      minlevel = 0               # Minimum level
      maxlevel = 5               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.5
-     coarsen_threshold = 0.1
+     refine_threshold = 0.1
+     coarsen_threshold = 0.05
      smooth-refine = T
+     smooth-level = 4
      coarsen-delay = 0
 
 # Time stepping
@@ -57,7 +60,21 @@
      mi = 4
      mj = 1
 
+     ax = 0
+     bx = 2
+     ay = 0
+     by = 0.5
+
 [clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 1             # maux
+     src_term = 1         # src_term
+
+     mwaves = 5           # mwaves
+     mthlim = 4 4 4 4 2       # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 1             # maux
