(amrclaw/2d/euler/quadrants) added quadrants example (simplified) and support for 5.0

--- a/applications/amrclaw/euler/2d/quadrants/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/quadrants/fclaw_options.ini
@@ -1,21 +1,24 @@
 [user]
-     gamma = 1.4
+    example = 0   # No mapping
+    gamma = 1.4
+    claw-version = 5
 
 [Options]
 
 # Grids
-     mx = 8
-     my = 8
+     mx = 16
+     my = 16
      mbc = 2
 
 # Regridding information
-     minlevel = 1               # Minimum level
-     maxlevel = 6               # Maximum levels of refinement
+     minlevel = 0               # Minimum level
+     maxlevel = 5               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.4
-     coarsen_threshold = 0.1
-     smooth-refine=T
-     coarsen-delay = 1
+     refine_threshold = 0.25
+     coarsen_threshold = 0.025
+     smooth-refine = T
+     smooth-level = 0
+     coarsen-delay = 0
 
 # Time stepping
      tfinal = 0.8
@@ -31,15 +34,17 @@
 
      subcycle = T                # subcycle in time ( = T or F).
 
+     init_ghostcell=F
+
 # File and console IO
-     verbosity = production      # verbose
+     verbosity = essential      # verbose
      serialout = T               # ascii output
 
 # Debugging and diagnostics
      trapfpe = T
      mpi_debug = F
-     run_diagnostics = F
-     check_conservation = F
+     run-user-diagnostics = F
+     conservation-check = F
 
 # Equations and boundary conditions
      meqn = 4             # meqn
@@ -60,5 +65,14 @@
      maux = 0             # maux
      src_term = 0         # src_term
 
-     mwaves = 3           # mwaves
-     mthlim = 4 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
+     mwaves = 4           # mwaves
+     mthlim = 4 4 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack5]
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 0             # maux
+     src_term = 0         # src_term
+
+     mwaves = 4           # mwaves
+     mthlim = 4 4 4 4    # mthlim (is a vector in general, with 'mwaves' entries)
