--- a/applications/amrclaw/euler/2d/quadrants/Makefile.am
+++ b/applications/amrclaw/euler/2d/quadrants/Makefile.am
@@ -10,14 +10,15 @@ applications_amrclaw_euler_2d_quadrants_quadrants_SOURCES = \
 	applications/amrclaw/euler/2d/quadrants/quadrants_user.cpp \
 	applications/amrclaw/euler/2d/quadrants/fclaw2d_map_nomap.c \
 	applications/amrclaw/euler/2d/quadrants/setprob.f \
-	applications/amrclaw/euler/2d/quadrants/user_4.x/qinit.f \
-	applications/amrclaw/euler/2d/rp/rpn2eu3.f \
-	applications/amrclaw/euler/2d/rp/rpn2eu4.f \
-	applications/amrclaw/euler/2d/rp/rpn2eu5.f \
-	applications/amrclaw/euler/2d/rp/rpt2eu.f
+	applications/amrclaw/euler/2d/quadrants/user_4.6/qinit.f \
+	applications/amrclaw/euler/2d/quadrants/user_5.0/qinit.f90 \
+	applications/amrclaw/euler/2d/rp/clawpack46_rpn2_euler4.f \
+	applications/amrclaw/euler/2d/rp/clawpack46_rpt2_euler4.f \
+	applications/amrclaw/euler/2d/rp/clawpack5_rpn2_euler4.f90 \
+	applications/amrclaw/euler/2d/rp/clawpack5_rpt2_euler4.f90
 
 applications_amrclaw_euler_2d_quadrants_quadrants_CPPFLAGS = \
-        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
+        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS) $(FCLAW_CLAWPACK5_CPPFLAGS)
 
 applications_amrclaw_euler_2d_quadrants_quadrants_LDADD = \
-        $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD)  $(FCLAW_CLAWPACK5_LDADD) $(LDADD)
