--- a/Makefile.apps
+++ b/Makefile.apps
@@ -49,14 +49,14 @@ include applications/euler/2d/quadrants/Makefile.am
 # Mountain problem - SSE
 # include applications/Mountain/Makefile.am
 
-###   # AMRClaw examples from clawpack4.x
-# include applications/amrclaw/acoustics/2d/interface/Makefile.am
-# include applications/amrclaw/acoustics/2d/radial/Makefile.am
-# include applications/amrclaw/burgers/2d/pwconst/Makefile.am
-# include applications/amrclaw/advection/2d/swirl/Makefile.am
-# include applications/amrclaw/euler/2d/quadrants/Makefile.am
-# include applications/amrclaw/euler/2d/shockbubble/Makefile.am
-# include applications/amrclaw/shallow/2d/radialdam/Makefile.am
+###   # AMRClaw examples from clawpack4.6
+include applications/amrclaw/acoustics/2d/interface/Makefile.am
+include applications/amrclaw/acoustics/2d/radial/Makefile.am
+include applications/amrclaw/advection/2d/swirl/Makefile.am
+include applications/amrclaw/burgers/2d/pwconst/Makefile.am
+include applications/amrclaw/shallow/2d/radialdam/Makefile.am
+include applications/amrclaw/euler/2d/quadrants/Makefile.am
+include applications/amrclaw/euler/2d/shockbubble/Makefile.am
 
 # Geoclaw examples
 if FCLAW_ENABLE_GEOCLAW
