--- a/applications/NCAR_transport/gaussian/fclaw_options.ini
+++ b/applications/NCAR_transport/gaussian/fclaw_options.ini
@@ -1,11 +1,13 @@
 [user]
      example = 1          # 1 = cubedsphere;  2 = pillowsphere
+     kappa = 2
+     claw-version = 4
 
 [Options]
 
 # Grid dimensions
-     mx = 16               # mx_leaf
-     my = 16               # my_leaf
+     mx = 8               # mx_leaf
+     my = 8               # my_leaf
      mbc = 2              # mbc
 
 # Equations
@@ -13,12 +15,13 @@
 
 # Refinement
      minlevel = 0         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.25
-     coarsen_threshold = 0.05
-     smooth-refine=T
-     coarsen-delay=0
+     refine_threshold = 0.01
+     coarsen_threshold = 0.001
+     smooth-refine = T
+     smooth-level = 0
+     coarsen-delay = 0
 
 # Time stepping
      tfinal = 5.0         #
@@ -30,21 +33,21 @@
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 1            # Used for all three out styles;  has different meaning, though.
+     nout = 20            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
 
 # Console and file IO
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      serialout = T        # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging adn diagnostics
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
-     check_conservation = F
-     run_diagnostics = T
-     compute-error = T
+     conservation-check = F
+     run-user-diagnostics = F
+     compute-error = F
 
 # Mapping
      manifold = T         # Manifold
@@ -56,6 +59,15 @@
      shift = 0 0 0
 
 [clawpack46]
+     order  = 2 2         # normal and transverse order
+     mcapa = 1            # mcapa
+     maux = 3             # maux
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+
+[clawpack5]
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
      maux = 3             # maux
