--- a/Makefile.apps
+++ b/Makefile.apps
@@ -36,9 +36,9 @@ include applications/advection/2d/disk/Makefile.am
 include applications/advection/2d/sphere/Makefile.am
 
 # NCAR Transport problems on the sphere
-# include applications/NCAR_transport/gaussian/Makefile.am
-#include applications/NCAR_transport/slotted_disk/Makefile.am
-#include applications/NCAR_transport/correlatedcb/Makefile.am
+include applications/NCAR_transport/gaussian/Makefile.am
+include applications/NCAR_transport/slotted_disk/Makefile.am
+include applications/NCAR_transport/correlatedcb/Makefile.am
 
 # Euler example
 include applications/euler/2d/quadrants/Makefile.am
