--- a/applications/no_solver/fclaw_options.ini
+++ b/applications/no_solver/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-     example = 0
+     claw-version = 4
 
 [Options]
 
@@ -13,6 +13,8 @@
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
+     smooth-refine = T
+     refine-level = 5
 
 # Time stepping
      tfinal = 4.0         #
@@ -27,13 +29,15 @@
 
      subcycle = T         # subcycle in time ( = T or F).
 
+     init_ghostcell = F
+
 # Equation and boundary conditions
      meqn = 2             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
 # File and console IO
      serialout = T
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
 
 # mapping
      manifold = F         # Manifold
