(no_solver) Simplify example - only one no-map example

--- a/applications/no_solver/fclaw_options.ini
+++ b/applications/no_solver/fclaw_options.ini
@@ -8,13 +8,14 @@
      mbc = 2              # mbc
 
 # Regridding
-     minlevel = 2         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
-     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     minlevel = 2
+     maxlevel = 6
+     regrid_interval = 1
+
      refine_threshold = 0.25
      coarsen_threshold = 0.05
      smooth-refine = T
-     refine-level = 5
+     smooth-level = 5
 
 # Time stepping
      tfinal = 4.0         #
