(metric) Update metric example

--- a/applications/metric/2d/all_mappings/fclaw_options.ini
+++ b/applications/metric/2d/all_mappings/fclaw_options.ini
@@ -1,5 +1,6 @@
 [user]
-     example = 7
+     example = 1
+     claw-version = 4
 
 [Options]
 
@@ -11,16 +12,19 @@
      smooth-refine = T
 
      serialout = T
-     run_diagnostics = T
+     run-user-diagnostics = T
+     compute-error = T
 
-     minlevel = 6         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     minlevel = 4         # Minimum level
+     maxlevel = 4         # Maximum levels of refinement
 
      verbosity = production        # verbose
      trapfpe = T          # Trap floating point exceptions
      serialout = F
 
-     meqn = 3             # meqn
+
+
+     meqn = 2             # meqn
 
      mbc = 2              # mbc
 
