--- a/applications/no_solver/fclaw_options.ini
+++ b/applications/no_solver/fclaw_options.ini
@@ -8,8 +8,8 @@
      mbc = 2              # mbc
 
 # Regridding
-     minlevel = 2
-     maxlevel = 6
+     minlevel = 1
+     maxlevel = 5
      regrid_interval = 1
 
      refine_threshold = 0.25
@@ -18,14 +18,14 @@
      smooth-level = 5
 
 # Time stepping
-     tfinal = 4.0         #
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.0125   # Initial time step for 'minlevel'
+     tfinal = 1.0         #
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 0.1   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 16
+     nout = 10
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
@@ -62,8 +62,10 @@
      theta = 0
 
 # Diagnostics and debugging
-     check_conservation = F
-     run_diagnostics = F
+     conservation-check = F
+     run-user-diagnostics = F
+     report-timing=F
+
 
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
