--- a/applications/advection/2d/disk/fclaw_options.ini
+++ b/applications/advection/2d/disk/fclaw_options.ini
@@ -1,6 +1,5 @@
 [user]
-     example = 0          # 0 - 5 patch mapping;  1 - pillow disk mapping
-     alpha = 0.5          # Ratio of inner disk to outer disk
+     example = 0          # 0 - 5-patch mapping;  1 - pillow disk mapping
      claw-version = 4
 
 [Options]
@@ -11,15 +10,15 @@
 
 # Regridding options
 
-     minlevel = 2         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     minlevel = 1         # Minimum level
+     maxlevel = 6         # Maximum levels of refinement
 
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
 
      smooth-refine = T
-     smooth-level = 3
+     smooth-level = 5
 
 # Time stepping
      tfinal = 8.0         #
@@ -56,8 +55,8 @@
 # mapping functions
      manifold = T         # Manifold
 
-     phi = 0
      theta = 0
+     phi = 0
 
      shift = 1 1 0
 
