(bowl) Update to Python files

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -20,7 +20,7 @@
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 1.0         # Final time
+     tfinal = 4.0         # Final time
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.1   # Initial time step for 'minlevel'
@@ -31,7 +31,7 @@
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 3            # Used for all three out styles;  has different meaning, though.
+     nout = 12            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
@@ -45,8 +45,8 @@
 # Diagnostics and debugging
      trapfpe = T          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
-     check_conservation = F
-     run_diagnostics = F
+     conservation-check = F
+     run-user-diagnostics = T
 
 # Equations and boundary conditions
      meqn = 3             # Number of equations
