(bowl/matlab/python) Update bathy file and setplot.py file

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-	example = 0
+	example = 1
 [Options]
 
 # Grid dimensions
@@ -46,7 +46,7 @@
      trapfpe = T          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
      conservation-check = F
-     run-user-diagnostics = T
+     run-user-diagnostics = F
 
 # Equations and boundary conditions
      meqn = 3             # Number of equations
@@ -61,7 +61,7 @@
      ay = -100
      by = 100
 
-     mi = 1
+     mi = 3
      mj = 1
 
 
