(bowl) Set ini file for run to demonstrate parallel bug

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -24,20 +24,20 @@
 # Time stepping
      tfinal = 8.0         # Final time
 
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.1   # Initial time step for 'minlevel'
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 1.2   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # 1 : Output steps  = tfinal/nout;
+     outstyle = 3         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 24            # Used for all three out styles;  has different meaning, though.
-     nstep = 4            # Only used if outstyle is 3
+     nout = 100            # Used for all three out styles;  has different meaning, though.
+     nstep = 100            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
-     outstyle-uses-maxlevel = F
+     outstyle-uses-maxlevel = T
      weighted_partition = T
 
 # File and console IO
