(replicated) Update velocity field;  fix initial conditoions

--- a/applications/advection/2d/replicated/fclaw_options.ini
+++ b/applications/advection/2d/replicated/fclaw_options.ini
@@ -3,6 +3,7 @@
 # -----------------------------------------------------------
 [user]
      example = 0          # A periodic
+     claw-version=4
 
 # -----------------------------------------------------------
 # Basic ForestClaw options
@@ -58,14 +59,10 @@
      periodic_x = T
      periodic_y = T
 
-     mi = 2
-     mj = 2
+     mi = 4
+     mj = 4
 
-     # These dimensions only get used if manifold = F
-     ax = 0
-     bx = 1
-     ay = 0
-     by = 1
+     #  (ax,bx,ay,by)=(0,mi,0,mj) are set in torus.cpp
 
 # -----------------------------------------------------------
 # Package options
