(replicated) Added new user option for replication

--- a/applications/advection/2d/replicated/fclaw_options.ini
+++ b/applications/advection/2d/replicated/fclaw_options.ini
@@ -3,7 +3,8 @@
 # -----------------------------------------------------------
 [user]
      example = 0          # A periodic
-     claw-version=4
+     claw-version = 4
+     replicate-factor = 4  # Set to -1 to use --mi, --mj (below)
 
 # -----------------------------------------------------------
 # Basic ForestClaw options
@@ -59,6 +60,8 @@
      periodic_x = T
      periodic_y = T
 
+     # Dimensions of brick domain - mi x mj.  To override 'replicate_factor',
+     # set replicate_factor=-1.
      mi = 4
      mj = 4
 
