(bowl/geoclaw) Update options/Matlab file

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -24,17 +24,17 @@
 # Time stepping
      tfinal = 8.0         # Final time
 
-     use_fixed_dt = T     # Take a fixed time step
+     use_fixed_dt = F     # Take a fixed time step
      initial_dt = 1.2   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
+     desired_cfl = 0.8    # desired cfl
 
-     outstyle = 3         # 1 : Output steps  = tfinal/nout;
+     outstyle = 1         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
                           # 3 : Take nout steps;  save files every nstep steps.
 
-     nout = 100            # Used for all three out styles;  has different meaning, though.
-     nstep = 100            # Only used if outstyle is 3
+     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nstep = 1            # Only used if outstyle is 3
 
      subcycle = F         # subcycle in time ( = T or F).
      outstyle-uses-maxlevel = T
@@ -45,7 +45,7 @@
      serialout = T
 
 # Diagnostics and debugging
-     trapfpe = T          # Trap floating point errors.
+     trapfpe = F          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
      check_conservation = F
      run_diagnostics = F
