Rebase new code using "after_regrid" onto gauges code

--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-	example = 1
+	example = 0
 [Options]
 
 # Grid dimensions
@@ -46,7 +46,7 @@
      trapfpe = F          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
      conservation-check = F
-     run-user-diagnostics = T
+     run-user-diagnostics = F
 
 # Equations and boundary conditions
      meqn = 3             # Number of equations
@@ -61,8 +61,8 @@
      ay = -100
      by = 100
 
-     mi = 2
-     mj = 2
+     mi = 1
+     mj = 1
 
 
 [geoclaw]
