(geoclaw/chile) More changes to Chile 2010 example

--- a/applications/geoclaw/chile2010/Makefile
+++ b/applications/geoclaw/chile2010/Makefile
@@ -12,7 +12,7 @@ CLAWMAKE = $(CLAW)/clawutil/src/Makefile.common
 # ----------------------------------
 
 CLAW_PKG = geoclaw                  # Clawpack package to use
-EXE = xgeoclaw                 # Executable to create
+EXE = chile2010                 # Executable to create
 SETRUN_FILE = setrun.py        # File containing function to make data
 OUTDIR = _output               # Directory for output
 SETPLOT_FILE = setplot.py      # File containing function to set plots
@@ -23,7 +23,7 @@ RESTART = False
 # Environment variable FC should be set to fortran compiler, e.g. gfortran
 
 # Compiler flags can be specified here or set as an environment variable
-FFLAGS ?= 
+FFLAGS ?=
 
 # ---------------------------------
 # package sources for this program:
@@ -34,7 +34,7 @@ include $(GEOLIB)/Makefile.geoclaw
 
 # ---------------------------------------
 # package sources specifically to exclude
-# (i.e. if a custom replacement source 
+# (i.e. if a custom replacement source
 #  under a different name is provided)
 # ---------------------------------------
 
@@ -63,8 +63,7 @@ include $(CLAWMAKE)
 topo:
 	python maketopo.py
 
-all: 
+all:
 	$(MAKE) topo
 	$(MAKE) .plots
 	$(MAKE) .htmls
-
