(bowl_slosh) Minor update to .ini file

--- a/applications/geoclaw/bowl_slosh/fclaw_options.ini
+++ b/applications/geoclaw/bowl_slosh/fclaw_options.ini
@@ -44,8 +44,8 @@
 # Diagnostics and debugging
      trapfpe = T          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
-     check_conservation = F
-     run_diagnostics = F
+     conservation-check = F
+     run-user-diagnostics = T
 
 # Equations and boundary conditions
      meqn = 3             # Number of equations
