(geoclaw/slosh) Updated Makefile so that Clawpack 'make output' and 'make plots' works

--- a/applications/geoclaw/bowl_slosh/fclaw_options.ini
+++ b/applications/geoclaw/bowl_slosh/fclaw_options.ini
@@ -17,7 +17,8 @@
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.05
-     smooth-refine = F
+     smooth-refine = T
+     smooth-level=4
      coarsen-delay = 0
 
 # Time stepping
@@ -42,7 +43,7 @@
      serialout = T
 
 # Diagnostics and debugging
-     trapfpe = T          # Trap floating point errors.
+     trapfpe = F          # Trap floating point errors.
      mpi_debug = F        # Attach mpi processes in gdb
      conservation-check = F
      run-user-diagnostics = T
