(chile2010/matlab) Add routine to plot regions

--- a/applications/geoclaw/chile2010/fclaw_options.ini
+++ b/applications/geoclaw/chile2010/fclaw_options.ini
@@ -11,12 +11,13 @@
      init_ghostcell = F   # Initialize ghost cells
 
 # Regridding information
-     minlevel = 2         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     minlevel = 1         # Minimum level
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.01
      coarsen_threshold = 0.01
-     smooth-refine = F
+     smooth-refine = T
+     smooth-level = 4
      coarsen-delay = 0
 
 # Time stepping
