Added header files to Makefiles so distcheck is happy

--- a/applications/NCAR_transport/gaussian/Makefile.am
+++ b/applications/NCAR_transport/gaussian/Makefile.am
@@ -18,6 +18,7 @@ applications_NCAR_transport_gaussian_gaussian_SOURCES = \
 	applications/NCAR_transport/gaussian/user_5.0/tag4coarsening.f \
 	applications/NCAR_transport/all/velocity_wind.f \
 	applications/NCAR_transport/all/gaussian.f \
+	applications/NCAR_transport/all/transport_user.h \
 	applications/NCAR_transport/all/user46_b4step2_manifold.f \
 	applications/NCAR_transport/all/user5_b4step2_manifold.f90 \
 	applications/advection/2d/all/user46_setaux_manifold.f \
