--- a/applications/amrclaw/burgers/2d/pwconst/Makefile.am
+++ b/applications/amrclaw/burgers/2d/pwconst/Makefile.am
@@ -2,6 +2,7 @@ bin_PROGRAMS += applications/amrclaw/burgers/2d/pwconst/pwconst
 
 applications_amrclaw_burgers_2d_pwconst_pwconst_SOURCES = \
 	applications/amrclaw/burgers/2d/pwconst/pwconst_user.cpp \
+	applications/amrclaw/burgers/2d/pwconst/pwconst_user.h \
 	applications/amrclaw/burgers/2d/pwconst/pwconst.cpp \
 	applications/amrclaw/burgers/2d/pwconst/fclaw2d_map_nomap.c \
 	applications/amrclaw/burgers/2d/pwconst/user_4.6/qinit.f \
