--- a/applications/amrclaw/shallow/2d/radialdam/Makefile.am
+++ b/applications/amrclaw/shallow/2d/radialdam/Makefile.am
@@ -8,6 +8,7 @@ bin_PROGRAMS += applications/amrclaw/shallow/2d/radialdam/radialdam
 applications_amrclaw_shallow_2d_radialdam_radialdam_SOURCES = \
 	applications/amrclaw/shallow/2d/radialdam/radialdam.cpp \
 	applications/amrclaw/shallow/2d/radialdam/radialdam_user.cpp \
+	applications/amrclaw/shallow/2d/radialdam/radialdam_user.h \
 	applications/amrclaw/shallow/2d/radialdam/fclaw2d_map_nomap.c \
 	applications/amrclaw/shallow/2d/radialdam/fclaw2d_map_pillowdisk5.c \
 	applications/amrclaw/shallow/2d/radialdam/setprob.f \
@@ -17,6 +18,7 @@ applications_amrclaw_shallow_2d_radialdam_radialdam_SOURCES = \
 	applications/amrclaw/shallow/2d/radialdam/user_5.0/setaux.f90 \
 	applications/amrclaw/shallow/2d/radialdam/user_5.0/tag4refinement.f90 \
 	applications/amrclaw/shallow/2d/radialdam/user_5.0/tag4coarsening.f90 \
+	applications/amrclaw/shallow/2d/rp/clawpack_user.h \
 	applications/amrclaw/shallow/2d/rp/clawpack46_rpn2.f \
 	applications/amrclaw/shallow/2d/rp/clawpack46_rpt2.f \
 	applications/amrclaw/shallow/2d/rp/clawpack5_rpn2.f90 \
