(ini/matlab) Set init_ghostcell=F

--- a/applications/NCAR_transport/slotted_disk/sisc.ini
+++ b/applications/NCAR_transport/slotted_disk/sisc.ini
@@ -15,16 +15,16 @@
 
 # Refinement
      minlevel = 2         # Minimum level
-     maxlevel = 6         # Maximum levels of refinement
+     maxlevel = 3         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
      refine_threshold = 0.25
      coarsen_threshold = 0.001
      smooth-refine = T
-     smooth-level = 5
+     smooth-level = 2
      coarsen-delay = 0
 
 # Time stepping
-     tfinal = 5         #
+     tfinal = 5.0         #
      use_fixed_dt = T     # Take a fixed time step
      initial_dt = 2.5e-3    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
@@ -38,6 +38,7 @@
      advance-one-step = F
      outstyle-uses-maxlevel = F
 
+     init_ghostcell = false
 
 # Console and file IO
      verbosity = essential        # verbose
